tests/ui/fail/python_power_operator.stderr
error: Potentially invalid expansion. Expected an expression, an identifier, `::`, `<`, `Self`, `break` or 12 others.
 --> tests/ui/fail/python_power_operator.rs:5:14
  |
5 |         $e * *$e
  |              ^
